sealos-app-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: growark-bigscreen-svc
  namespace: default
  labels:
    app: growark-bigscreen
spec:
  type: LoadBalancer
  selector:
    app: growark-bigscreen
  ports:
  - port: 80
    targetPort: 3001
    protocol: TCP
    name: http
  sessionAffinity: ClientIP

---
apiVersion: v1
kind: Service
metadata:
  name: growark-mobile-svc
  namespace: default
  labels:
    app: growark-mobile
spec:
  type: LoadBalancer
  selector:
    app: growark-mobile
  ports:
  - port: 80
    targetPort: 3002
    protocol: TCP
    name: http
  sessionAffinity: ClientIP
