sealos-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: growark-backend-svc
  namespace: default
  labels:
    app: growark-backend
spec:
  type: LoadBalancer
  selector:
    app: growark-backend
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  sessionAffinity: ClientIP
